--- a/css/scss/objects.wrappers.scss
+++ b/css/scss/objects.wrappers.scss
@@ -35,6 +35,40 @@
 	height: 20px;
 	cursor: pointer;
 }
+.icon__post--link{
+	background: url('../img/sprite.png') 0px -40px;
+	width: 16px;
+	height: 16px;
+	cursor: pointer;
+}
+.icon__post--fb{
+	background: url('../img/sprite.png') -16px -40px;
+	width: 9px;
+	height: 16px;
+	cursor: pointer;
+}
+.icon__post--tw{
+	background: url('../img/sprite.png') -25px -40px;
+	width: 17px;
+	height: 16px;
+	cursor: pointer;
+}
+.icon__post--google{
+	background: url('../img/sprite.png') -42px -40px;
+	width: 18px;
+	height: 16px;
+	cursor: pointer;
+}
+
+.aside-ul__icon--close{
+	background: url('../img/sprite.png') 0px -56px;
+	width: 6px;
+	height: 11px;
+	cursor: pointer;
+	margin-top: 2px;
+	margin-right: 8px;
+}
+
 
 .social-icon{
 	float: left;
@@ -48,5 +82,209 @@
 .logo{
 	position: absolute;
 	left: 50%;
-	margin-left: -133px;
+	margin-left: -90px;
+}
+
+//Section picture
+
+.picture-ul{
+	@include block;
+	margin: $mgn-block auto 43px;
+	
+	li {
+		border: 4px solid #fff;
+		@include grid(4, 2%);
+		img {
+			width: 100%;
+		}
+	}
+}
+
+//article
+.article{
+	width: 1165px;
+	height: auto;
+	background: #fff;
+	margin: auto;
+	margin-bottom: $mgn-block;
+	padding: 70px;
+	text-align: center;
+	h3{
+		margin-bottom: 30px;
+	}
+	.article__short{
+		max-width: 600px;
+		font-size: 18px;
+		line-height: 30px;
+		margin: auto;
+		margin-bottom: 45px;
+	}
+}
+
+//Post
+.main{
+	overflow: hidden;
+}
+.post-list{
+	float: left;
+	width: 865px;
+	height: auto;
+}
+.post{
+	@include block_bg;
+	padding: 50px 30px;
+	margin-bottom: 30px;
+	h3{
+		margin-bottom: 25px;
+	}
+	a{
+		text-decoration: none;
+	}
+	&:last-child{
+		margin-bottom: $mgn-block;
+	}
+}
+.post__flex{
+	@include flex_row(flex-start, nowrap, row);
+}
+.post__img{
+	max-width: 220px;
+	margin-right: 30px;
+	img{
+		width: 100%;
+		margin-bottom: 5px;
+		@include border_img;
+	}
+}
+.img-signature{
+	color: #6c6e72;
+	font-size: 12px;
+	font-family: $font-default;
+	text-align: center;
+}
+.post__content{
+	max-width: 400px;
+	
+	.article__short{
+		margin-bottom: 20px;
+	}
+	
+	.content__text{
+		font-family: $font-default;
+		color: #636060;
+		font-size: 14px;
+		line-height: 24px;
+	}
+}
+
+.post__info{
+	width: 165px;
+	text-align: center;
+	@include flex_row(flex-start, nowrap, column);
+
+	li{
+		float: none;
+		width: 165px;
+		text-align: center;
+		margin: 7px auto;
+
+		.sprite{
+			float: none;
+			display: block;
+			margin: auto;
+		}
+
+	}
+}
+.author-title{
+	font-family: $text-font;
+	font-size: 20px;
+	display: block;
+}
+.author{
+	color: #e6618c;
+	font-family: $font-default;
+	font-size: 14px;
+}
+.avatar{
+	width: 46px;
+	height: 46px;
+	border-radius: 50%;
+}
+
+aside{
+	float: right;
+	width: 265px; 
+}
+.aside__block{
+	@include block_bg;
+	padding: 30px;
+	margin-bottom: 30px;
+}
+.aside-ul{
+	font-family: $font-default;
+	font-size: 13px;
+
+	li{
+		margin: 10px 0px;
+	}
+	a{
+		color: #000;
+		text-decoration: none;
+		
+		&:hover{
+			text-decoration: underline;
+		}
+	}
+}
+.dropdown-ul{
+	margin-left: 20px;
+
+	li a{
+		color: #e6618c;
+		font-style: italic;
+	}
+}
+
+//main-2
+.main-2__left{
+	width: 565px;
+	float: left;
+	@include block_bg;
+	padding: 40px 30px;
+
+	h3{
+		margin-bottom: 25px;
+	}
+}
+
+.main2__descr{
+	color: #636060;
+	font-family: $font-default;
+	font-size: 14px;
+	line-height: 19px;
+}
+
+.form{
+	@include block;
+
+	input, textarea{
+		width: 265px;
+		height: 47px;
+		border: 1px solid #d6d6d6;
+		background: #f2f2f2;
+		clear: both;
+		font-size: 14px;
+		font-style: italic;
+		color: #c0c0c0;
+		padding: 0px 25px;
+		margin-top: 20px;
+	}
+	textarea{
+		width: 100%;
+		height: 240px;
+		padding: 25px;
+		font-family: $font-default;
+		margin-bottom: 20px;
+	}
 }
