--- a/css/scss/settings.global.scss
+++ b/css/scss/settings.global.scss
@@ -5,7 +5,7 @@
 html, body{
 	width: 100%;
 	height: auto;
-	font-family: 'Arial', sans-serif;
+	font-family: $text-font;
 	font-size: 16px;
 	background: $bg-color url('../img/bg.jpg') no-repeat center top;
 }
@@ -23,3 +23,9 @@ header{
 	background: $bg-header;
 	padding: 60px 0px;
 }
+
+.article__short{
+	font-size: 20px;
+	line-height: 24px;
+}
+
