--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,22 @@ button {
   border: 0px;
 }
 
+@font-face {
+  font-family: "Kaffeesatz";
+  src: url("../fonts/YanoneKaffeesatz/YanoneKaffeesatz-Regular.eot");
+  src: url("../fonts/YanoneKaffeesatz/YanoneKaffeesatz-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/YanoneKaffeesatz/YanoneKaffeesatz-Regular.woff") format("woff"), url("../fonts/YanoneKaffeesatz/YanoneKaffeesatz-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "ArialNarrowRegular";
+  src: url("../fonts/ArialNarrowRegular/ArialNarrowRegular.eot");
+  src: url("../fonts/ArialNarrowRegular/ArialNarrowRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/ArialNarrowRegular/ArialNarrowRegular.woff") format("woff"), url("../fonts/ArialNarrowRegular/ArialNarrowRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -59,7 +75,7 @@ button {
 html, body {
   width: 100%;
   height: auto;
-  font-family: 'Arial', sans-serif;
+  font-family: "ArialNarrowRegular", sans-serif;
   font-size: 16px;
   background: #e5e5e3 url("../img/bg.jpg") no-repeat center top;
 }
@@ -76,6 +92,38 @@ header {
   height: 140px;
   background: #f7f7f7;
   padding: 60px 0px;
+}
+
+.article__short {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+h3 {
+  font-size: 28px;
+  font-family: "Kaffeesatz", sans-serif;
+  color: #000;
+  line-height: 30px;
+}
+
+h4 {
+  font-size: 20px;
+  font-family: "Kaffeesatz", sans-serif;
+  line-height: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.btn-enter {
+  min-width: 190px;
+  display: inline-block;
+  padding: 13px 14px;
+  background: #202020;
+  font-family: "ArialNarrowRegular", sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
 }
 
 .sprite {
@@ -120,6 +168,43 @@ header {
   cursor: pointer;
 }
 
+.icon__post--link {
+  background: url("../img/sprite.png") 0px -40px;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.icon__post--fb {
+  background: url("../img/sprite.png") -16px -40px;
+  width: 9px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.icon__post--tw {
+  background: url("../img/sprite.png") -25px -40px;
+  width: 17px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.icon__post--google {
+  background: url("../img/sprite.png") -42px -40px;
+  width: 18px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.aside-ul__icon--close {
+  background: url("../img/sprite.png") 0px -56px;
+  width: 6px;
+  height: 11px;
+  cursor: pointer;
+  margin-top: 2px;
+  margin-right: 8px;
+}
+
 .social-icon {
   float: left;
 }
@@ -132,5 +217,244 @@ header {
 .logo {
   position: absolute;
   left: 50%;
-  margin-left: -133px;
+  margin-left: -90px;
+}
+
+.picture-ul {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  margin: 65px auto 43px;
+}
+
+.picture-ul li {
+  border: 4px solid #fff;
+  float: left;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  width: 23.5%;
+}
+
+.picture-ul li:nth-child(4n) {
+  margin-right: 0px;
+}
+
+.picture-ul li img {
+  width: 100%;
+}
+
+.article {
+  width: 1165px;
+  height: auto;
+  background: #fff;
+  margin: auto;
+  margin-bottom: 65px;
+  padding: 70px;
+  text-align: center;
+}
+
+.article h3 {
+  margin-bottom: 30px;
+}
+
+.article .article__short {
+  max-width: 600px;
+  font-size: 18px;
+  line-height: 30px;
+  margin: auto;
+  margin-bottom: 45px;
+}
+
+.main {
+  overflow: hidden;
+}
+
+.post-list {
+  float: left;
+  width: 865px;
+  height: auto;
+}
+
+.post {
+  background: #fff;
+  border: 1px solid #d6d6d6;
+  padding: 50px 30px;
+  margin-bottom: 30px;
+}
+
+.post h3 {
+  margin-bottom: 25px;
+}
+
+.post a {
+  text-decoration: none;
+}
+
+.post:last-child {
+  margin-bottom: 65px;
+}
+
+.post__flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+}
+
+.post__img {
+  max-width: 220px;
+  margin-right: 30px;
+}
+
+.post__img img {
+  width: 100%;
+  margin-bottom: 5px;
+  border: 4px solid #f0f0f0;
+}
+
+.img-signature {
+  color: #6c6e72;
+  font-size: 12px;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+}
+
+.post__content {
+  max-width: 400px;
+}
+
+.post__content .article__short {
+  margin-bottom: 20px;
+}
+
+.post__content .content__text {
+  font-family: "Arial", sans-serif;
+  color: #636060;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.post__info {
+  width: 165px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+}
+
+.post__info li {
+  float: none;
+  width: 165px;
+  text-align: center;
+  margin: 7px auto;
+}
+
+.post__info li .sprite {
+  float: none;
+  display: block;
+  margin: auto;
+}
+
+.author-title {
+  font-family: "ArialNarrowRegular", sans-serif;
+  font-size: 20px;
+  display: block;
+}
+
+.author {
+  color: #e6618c;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+}
+
+.avatar {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+}
+
+aside {
+  float: right;
+  width: 265px;
+}
+
+.aside__block {
+  background: #fff;
+  border: 1px solid #d6d6d6;
+  padding: 30px;
+  margin-bottom: 30px;
+}
+
+.aside-ul {
+  font-family: "Arial", sans-serif;
+  font-size: 13px;
+}
+
+.aside-ul li {
+  margin: 10px 0px;
+}
+
+.aside-ul a {
+  color: #000;
+  text-decoration: none;
+}
+
+.aside-ul a:hover {
+  text-decoration: underline;
+}
+
+.dropdown-ul {
+  margin-left: 20px;
+}
+
+.dropdown-ul li a {
+  color: #e6618c;
+  font-style: italic;
+}
+
+.main-2__left {
+  width: 565px;
+  float: left;
+  background: #fff;
+  border: 1px solid #d6d6d6;
+  padding: 40px 30px;
+}
+
+.main-2__left h3 {
+  margin-bottom: 25px;
+}
+
+.main2__descr {
+  color: #636060;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.form {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+.form input, .form textarea {
+  width: 265px;
+  height: 47px;
+  border: 1px solid #d6d6d6;
+  background: #f2f2f2;
+  clear: both;
+  font-size: 14px;
+  font-style: italic;
+  color: #c0c0c0;
+  padding: 0px 25px;
+  margin-top: 20px;
+}
+
+.form textarea {
+  width: 100%;
+  height: 240px;
+  padding: 25px;
+  font-family: "Arial", sans-serif;
+  margin-bottom: 20px;
 }
