--- a/css/scss/elements.links.scss
+++ b/css/scss/elements.links.scss
@@ -6,6 +6,7 @@
 	font-family: $text-font;
 	font-size: 18px;
 	text-transform: uppercase;
+	text-align: center;
 	color: #fff;
 	text-decoration: none;
 }
