--- a/css/scss/settings.global.scss
+++ b/css/scss/settings.global.scss
@@ -29,3 +29,15 @@ header{
 	line-height: 24px;
 }
 
+.input, textarea{
+	width: 100%;
+	height: 47px;
+	border: 1px solid #d6d6d6;
+	background: #f2f2f2;
+	clear: both;
+	font-size: 14px;
+	font-style: italic;
+	color: #c0c0c0;
+	padding: 0px 25px;
+	margin-top: 20px;
+}
