--- a/css/scss/settings.variables.scss
+++ b/css/scss/settings.variables.scss
@@ -1,5 +1,6 @@
 $bg-color: #e5e5e3;
 $bg-header: #f7f7f7;
+$bg-footer: #202020;
 $title-font: "Kaffeesatz", sans-serif;
 $text-font: "ArialNarrowRegular", sans-serif;
 $font-default: "Arial", sans-serif;
