--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -23,6 +23,7 @@
 //Objects
 //Селлекторы с классами
 @import "objects.wrappers";
+@import "objects.media";
 
 //Components
 //Кнопки, навигация, инпуты и т.п.
