--- a/css/scss/objects.wrappers.scss
+++ b/css/scss/objects.wrappers.scss
@@ -102,6 +102,8 @@
 	margin-left: -90px;
 }
 
+
+
 //Section picture
 
 .picture-ul{
@@ -291,11 +293,11 @@ aside{
 }
 .aside-ul{
 	font-family: $font-default;
-	font-size: 13px;
+	font-size: 15px;
 
 	li{
 		cursor: pointer;
-		margin: 10px 0px;
+		padding: 10px 0px 0px;
 		padding-left: 10px;
 	}
 	a{
@@ -344,6 +346,7 @@ aside{
 	}
 	textarea{
 		width: 100%;
+		min-width: 100%;
 		height: 240px;
 		padding: 25px;
 		font-family: $font-default;
