--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,13 @@ button {
 }
 
 html, body {
+  position: relative;
   width: 100%;
   height: auto;
   font-family: "ArialNarrowRegular", sans-serif;
   font-size: 16px;
   background: #e5e5e3 url("../img/bg.jpg") no-repeat center top;
+  overflow-x: hidden;
 }
 
 .container {
@@ -110,6 +112,10 @@ header {
   color: #c0c0c0;
   padding: 0px 25px;
   margin-top: 20px;
+}
+
+button, a {
+  cursor: pointer;
 }
 
 h3 {
@@ -482,12 +488,12 @@ aside {
 
 .aside-ul {
   font-family: "Arial", sans-serif;
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .aside-ul li {
   cursor: pointer;
-  margin: 10px 0px;
+  padding: 10px 0px 0px;
   padding-left: 10px;
 }
 
@@ -547,6 +553,7 @@ aside {
 
 .form textarea {
   width: 100%;
+  min-width: 100%;
   height: 240px;
   padding: 25px;
   font-family: "Arial", sans-serif;
@@ -625,4 +632,28 @@ footer {
   height: 140px;
   background: #202020;
   padding: 60px 0px;
+}
+
+.nav-ul {
+  width: 250px;
+  position: fixed;
+  right: -250px;
+  top: 0px;
+  bottom: 0px;
+  background: #202020;
+  z-index: 10;
+  box-shadow: inset 3px 0px 10px rgba(0, 0, 0, 0.4);
+}
+
+.nav-ul a {
+  display: block;
+  padding: 20px 30px;
+  font-size: 18px;
+  font-family: "ArialNarrowRegular", sans-serif;
+  color: #ddd;
+  text-decoration: none;
+}
+
+.nav-ul a:hover {
+  background: #282828;
 }
