--- a/css/scss/elements.links.scss
+++ b/css/scss/elements.links.scss
@@ -9,4 +9,12 @@
 	text-align: center;
 	color: #fff;
 	text-decoration: none;
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-o-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
+
+	&:hover{
+		box-shadow: inset 0px 0px 0px 50px #000;
+	}
 }
